Fixed alignment on sorting buttons (Publications)

--- a/sites/all/themes/newmedialab/css/newmedialab.custom.css
+++ b/sites/all/themes/newmedialab/css/newmedialab.custom.css
@@ -733,6 +733,8 @@ ul.tabs:last-child{
 
 ul.tabs{
     border: none;
+    margin-left: 0;
+    padding-left: 0;
 }
 
 ul{
